lib/stringify-checked/tests/ui/stringify_expr/bad_expression.rs
use stringify_checked::stringify_expr;

fn main() {
    stringify_expr!(match Some(0) {});
}
